- FileInfo: The option '-v' now also does a semantic validation of mzML files.
- FileMerger: Improved interface
- ConsensusID: Now also supports consensus identification of features and consensus features.
- INIFileEditor: Support for string/int/double lists and input/output files was added.

New features and improvements of TOPPView:
- Added functionality for editing feature data
- Added measuring and generic annotations to 1D view

Changes to OpenMS XML formats:
- ParamXML:
  - Restrictions in Param .ini files are represented by 'min:max' instead
    of 'min-max' now, to avoid issues with small (1e-06) and negative numbers.
  - Replaced 'advanced' attribute by the more general 'tags' attribute.
  - Added support for float, int and string lists
- featureXML:
  - Added tag <subordinate> to store competing features that did not qualify for the final map
  - Removed <description> section
  - Added document Id
  - Added protein and peptide information
- consensusXML:
	- Added document Id
	- Added protein and peptide information
- idXML:
	- Added document Id

Changes to the contrib package:
- The build system is now based on CMake supporting Linux, MacOS and Windows.
- Updated SeqAn package to revision 2666 (this fixes the STL debug error)
- Updated xerces-c to version 3.0.0
- Updated boost to version 1.37.0
- Downgraded GSL to 1.8 (because of Mac/Windows support)

Detailed list of changes to specific OpenMS classes:
- Renamed and moved classes
  - Renamed MSMetaDataExplorer to MetaDataBrowser
  - Renamed ProcessingMethod to DataProcessing
  - Moved XMLValidator from FORMAT/ to FORMAT/VALIDATORS/
- Removed classes
  - DPeakArray (moved the functionality to the classes that inherited from it)
  - IDSpectrumMapper (replaced by IDMapper)
  - IDFeatureMapper (replaced by IDMapper)
  - FeatureXMLHandler (merged into FeatureXMLFile)
  - ConsensusXMLHandler (merged into ConsensusXMLFile)
  - PeakPicker (merged into PeakPickerCWT)